<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.auth.signin.SignInFragment">
    <data>
        <variable
            name="viewModel"
            type="com.employa.employa.viewmodel.LogInViewModel"/>
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <TextView
        android:id="@+id/title_baseline"
        android:layout_marginBottom="80sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/comfortaa_bold"
        android:text="@string/button_sigin"
        android:textAlignment="center"
        android:textSize="24sp"
        android:textStyle="bold"
        />
    <EditText
        android:id="@+id/email_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="username"
        android:ems="10"
        android:fontFamily="@font/montserrat"
        android:hint="@string/email"
        android:text="@={viewModel.emailMutableData}"
        app:errorMessage ="@{viewModel.emailError}"
        android:inputType="textEmailAddress"
        android:singleLine="true"
        android:textAllCaps="false"
        />
        <EditText
            android:id="@+id/password_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:ems="10"
            android:fontFamily="@font/montserrat"
            android:hint="@string/password"
            android:text="@={viewModel.passwordMutableData}"
            app:errorMessage="@{viewModel.passwordError}"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            />
    <Button
        android:id="@+id/button_signin"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:layout_marginTop="30sp"
        android:text="@string/button_sigin"
        />
        <Button
            android:id="@+id/button_reset"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:layout_marginTop="10sp"
            android:text="@string/button_reset_password"
            />
    </LinearLayout>
    </ScrollView>

</layout>