...
                android:textSize="15sp"
                android:fontFamily="@font/comfortaa_bold"
                android:textColor="@color/colorPrimary"
                android:text="@string/profile_form_username"/>

            <EditText
                android:id="@+id/nameField"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:errorMessage="@{viewModel.usernameError}"
                android:text="@={viewModel.name}" />
...
                android:minLines="6"
                android:gravity="top|start"
                android:layout_marginTop="8dp"
                android:text="@{viewModel.user.description}"/>

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_primary"
                android:layout_marginTop="16dp"
                android:textSize="15sp"
                android:textColor="@color/white"
...
