...
                    android:visibility="gone"
                    tools:visibility="visible"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ImageView
                    android:id="@+id/edit_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@drawable/ic_edit_blue_24dp"
                    android:onClick="@{() -> actionHandler.editProfile()}"
                    android:visibility="gone"
...
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        app:civ_border_width="1dp"
                        app:civ_border_color="@color/circleImageViewBorder" />

                    <TextView
                        android:id="@+id/profile_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold"
                        android:text="@{viewModel.userData.name}"
...
